--- a/home/templates/home/sponsor_info.html
+++ b/home/templates/home/sponsor_info.html
@@ -2,12 +2,12 @@
 {% load humanize %}
 
 {% block title %}
-Sponsor info for {{ current_round.official_name }}
+Sponsorship leads for {{ current_round.official_name }}
 {% endblock %}
 
 {% block content %}
 
-<h1>Sponsorship information</h1>
+<h1>Outreachy sponsorship leads notes</h1>
 
 <div class="container">
 	<div class="row justify-content-center">
@@ -19,7 +19,7 @@ Sponsor info for {{ current_round.official_name }}
 			{% endif %}
 		</div>
 		<div class="col">
-			{{ current_round.internstarts|date:"F Y" }} to {{ current_round.internends|date:"F Y" }}
+			{{ current_round.internstarts|date:"F Y" }} cohort
 		</div>
 		<div class="col">
 			{% if next_round %}
@@ -32,7 +32,7 @@ Sponsor info for {{ current_round.official_name }}
 </div>
 
 {% if request.user.is_staff %}
-	<h2>Sponsor Summary</h2>
+	<h2>{{ current_round.internstarts|date:"F Y" }} cohort potential sponsors</h2>
 
 	<p><b>Emoji status:</b></p>
 	<ul>
@@ -49,7 +49,7 @@ Sponsor info for {{ current_round.official_name }}
 		<th scope="col">Edit</th>
 		<th scope="col">Status</th>
 		<th scope="col">RT #</th>
-		<th scope="col">Sponsor</th>
+		<th scope="col">Sponsorship lead</th>
 		<th scope="col">Amount</th>
 		<th scope="col">Community</th>
 		{% for s in sponsors_alpha %}
@@ -74,14 +74,14 @@ Sponsor info for {{ current_round.official_name }}
 		{% endfor %}
 	</table>
 
-	<h2>Community Sponsors</h2>
+	<h2>Community Sponsorship Leads</h2>
 	{% for community, sponsor_set, number_interns_approved, total_funding_needed in community_sponsors %}
 		{% if sponsor_set.0.participation.approval_status == sponsor_set.0.participation.APPROVED %}
 			<hr><h3 id='{{ community.slug }}'>{{ community }}</h3>
 		{% else %}
 			<hr><h3 id='{{ community.slug }}'>{{ community }} <span class="badge badge-pill badge-info">pending</span></h3>
 		{% endif %}
-		<p>${{ total_funding_needed|intcomma }} total funding needed for {{ number_interns_approved }} approved interns. <a href="{% url 'sponsor-info-details' round_slug=current_round.slug community_slug=community.slug %}">Sponsorship details and revision history.</a></p>
+		<p>${{ total_funding_needed|intcomma }} total funding needed for {{ number_interns_approved }} approved interns. <a href="{% url 'sponsor-info-details' round_slug=current_round.slug community_slug=community.slug %}">Sponsorship lead detailed notes.</a></p>
 		
 		<ul>
 			{% for s in sponsor_set %}
