Update Outreachy fiscal blog post
Add links to each call to action section, so that people can easily
figure out how they can help.

Make Outreachy's accomplishments bullet points for easier skimming by
potential sponsors and donors.

Add information about how the tech industry layoffs have made it harder
to find Outreachy mentors, even when an open source community has
funding for an internship.

Add the PayPal donation form directly into the donate section. That way
people can immediately click the button, rather than being redirected to
a very dull donation page.

--- a/home/templates/home/blog/2024-08-14-outreachy-needs-your-help.html
+++ b/home/templates/home/blog/2024-08-14-outreachy-needs-your-help.html
@@ -19,20 +19,35 @@
   </div>
   <h2>Outreachy's Legacy</h2>
   <p>
-    In the span of Outreachy's 14-year journey, <a href="https://www.outreachy.org/blog/2024-01-11/outreachy-2023-in-review/">Outreachy has supported over 1,000 interns</a> who were mentored by 133 open source and open science communities. Outreachy internships have been an inclusive and welcoming introduction to open source for people who face systemic bias or discrimination in the technology industry of their country.
+  In the span of Outreachy's 14-year journey, Outreachy has reached some amazing goals:</p>
+  <ul>
+	  <li><a href="https://www.outreachy.org/blog/2024-01-11/outreachy-2023-in-review/">1,000 interns have participated in Outreachy</a></li>
+	  <li>133 open source communities have mentored Outreachy interns</li>
+  </ul>
+
+  <p>Outreachy internships have been an inclusive and welcoming introduction to open source for people who face systemic bias or discrimination in the technology industry of their country.
   </p>
-  <p>
-    After their internships, <b>80% of past Outreachy interns continue to contribute to open source.</b>
+  <p>Outreachy does much more than introduce people to open source. Outreachy also helps the open source community retain people from marginalized groups:
   </p>
-  <p>
-    Among Outreachy interns who are employed, <b>44% of Outreachy past interns contribute to open source as part of their job.</b>
-  </p>
+  <ul>
+	  <li>After their internships, <b>80% of past Outreachy interns continue to contribute to open source.</b></li>
+	  <li>Among Outreachy interns who are employed, <b>44% of Outreachy past interns contribute to open source as part of their job.</b></li>
+  </ul>
   <h2>Outreachy's Future</h2>
   <p>
     Outreachy's future is bright, but our pathway to that future is becoming foggy. Like many diversity and open source initiatives, we are facing financial challenges, and we need the open source community's help and support.
   </p>
+  <p>There are several ways you can help support Outreachy:</p>
+  <ul>
+	  <li><a href="#mentor">Mentor Outreachy interns</a></li>
+	  <li><a href="#grants">Help us find grants</a></li>
+	  <li><a href="#corporate-sponsorship">Talk to your employer about becoming an Outreachy sponsor</a></li>
+	  <li><a href="#individual-donations">Make an individual donation to Outreachy</a></li>
+	  <li><a href="#fundraiser">Promote Software Freedom Conservancy's fundraiser</a></li>
+	  <li><a href="#stories">Share stories about Outreachy's impact</a></li>
+  </ul>
   <p>
-    We are optimistic about facing these challenges. We believe that we need a collective effort from the whole open source community to improve our chances of overcoming these financial challenges. We want to raise the alarm early and ask for help, so that we aren't forced to make any sudden decisions on our own.
+    We are optimistic about facing these challenges together. We believe that we need a collective effort from the whole open source community to improve our chances of overcoming these financial challenges. We want to raise the alarm early and ask for help, so that we aren't forced to make any sudden decisions on our own.
   </p>
   <h3>Outreachy Funding</h3>
   <p>
@@ -69,10 +84,12 @@
   <p>
     Similarly impacted are open source communities who rely on corporate financial support. Many communities who traditionally mentor Outreachy interns have not been able to find funding for those internships. As they have lost corporate funding, they have increasingly asked for Outreachy to fund their internships directly from our core activities fund.
   </p>
+  <p>
+  The open source community has also been impacted by the financial uncertainty in the tech industry. Many of the employers of open source contributors have announced budget cuts or layoffs. This creates an atmosphere of uncertainty, where people are afraid to lose their jobs. This means many former Outreachy mentors who would normally participate are struggling with precarious employment situations. This means finding Outreachy mentors is very hard, even when an open source community does have funding for an Outreachy internship.
+  </p>
   <h3>Fiscal outlook</h3>
   <p>
-    The tech industry financial uncertainty has a double impact on Outreachy: Outreachy is both receiving less corporate donations, and the demand for Outreachy to directly
-    fund internships with our participating communities has increased. Coupled with the end of several large grants, this means Outreachy's budget is very reduced.
+    The tech industry financial uncertainty has a triple impact on Outreachy: Outreachy is receiving less corporate donations, the demand for Outreachy to directly fund internships with our participating communities has increased, and open source communities who have internship funding can't find mentors because community members are facing unstable employment situations. Coupled with the end of several large grants, this means Outreachy's budget is very reduced.
   </p>
   <p>
     We know Outreachy is not alone in experiencing decreased donations. Other diversity in tech programs are also struggling. After 17 years, <a href="https://www.bizjournals.com/nashville/news/2024/07/08/girls-in-tech-shut-down-adriana-gascoigne.html"
@@ -83,7 +100,10 @@
   </p>
   <h3>Decreased internship cohort sizes</h3>
   <p>
-    With our budget constraints in mind, the Outreachy team made the tough decision to drastically decrease the number of internships in the May 2024 cohort. Our May internship cohorts are typically our largest cohorts, ranging from 50 to 70 interns. While Outreachy had mentor capacity to accept 47 interns for the May 2024 cohort, we only had the budget capacity to accept 35 interns. Without your help, Outreachy cohorts will stay small, around 30 to 40 interns at least through 2025.
+  With our budget constraints in mind, the Outreachy team made the tough decision to drastically decrease the number of internships in the May 2024 cohort. Our May internship cohorts are typically our largest cohorts, ranging from 50 to 70 interns. While Outreachy had mentor capacity to accept 47 interns for the May 2024 cohort, we only had the budget capacity to accept 35 interns.</p>
+
+  <p>
+  Without your help, Outreachy internship cohorts will stay small, around 30 to 40 interns at least through 2025.
   </p>
   <p>
     We don't want to detract from our amazing internship cohort! However, given recent news of other open source foundations and diversity initiatives announcing their closures, we want to be transparent about the challenges Outreachy is facing.
@@ -93,6 +113,7 @@
     We hope to face these challenges with the support of the amazing open source community, our corporate sponsors and grant makers, and all of the people who have participated in Outreachy. Together, we can face these challenges, weather the storm, and emerge more resilient than ever.
   </p>
   <p>Read on to find different ways you can help Outreachy.</p>
+  <hr id="mentor">
   <h3>Mentor Outreachy interns</h3>
   <p>
     Outreachy welcomes open source communities to mentor our interns. We are especially looking for communities who have funding for at least one intern ($8,000 USD).
@@ -122,9 +143,11 @@
   <p>
     Please <a href="https://www.outreachy.org/contact/organizers/">contact Outreachy organizers</a> to ask questions about mentoring Outreachy interns or to express interest in participating as an Outreachy mentoring organization.
   </p>
+  <hr id="grants">
   <h3>Grant opportunities</h3>
   <p>We encourage folks to share relevant calls for grant proposals with us, by emailing organizers at outreachy.org</p>
   <p>If you are a grant maker interested in learning more about Outreachy, please contact sponsors at outreachy.org</p>
+  <hr id="corporate-sponsorship">
   <h3>Corporate sponsorship</h3>
   <p>
     Outreachy welcomes additional corporate sponsors. We have the following game-changing sponsorship levels available for the December 2024 internship cohort:
@@ -153,13 +176,27 @@
     <a href="https://www.outreachy.org/sponsor/">Read more about Outreachy sponsorship</a>
   </p>
   <p>To sign up as a sponsor or request more information, please email sponsors at outreachy.org</p>
+  <hr id="individual-donations">
   <h3>Individual donations</h3>
   <p>
     If you have the financial means, Outreachy encourages you to donate via PayPal. Monthly donations are the most useful to us, but we welcome any donation amount you spare.
   </p>
   <p>
-    <a href="https://www.outreachy.org/sponsor/donate/">Donate to Outreachy</a>
+                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                    <input type="hidden" name="cmd" value="_s-xclick">
+                    <input type="hidden" name="hosted_button_id" value="9P3DB3AFPDZ7Q">
+                    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                    <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                </form>
   </p>
+  <p>
+  Donations are handled by Outreachy's 501(c)(3) non-profit parent organization, Software Freedom Conservancy. Donations are deductible from USA taxes. Individual donations are directed to Outreachy core activities fund, unless otherwise specified.
+  </p>
+
+  <p>
+    Individuals can also donate to Outreachy via <a href="https://www.outreachy.org/sponsor/donate/">check or wire.</a>
+  </p>
+  <hr id="fundraiser">
   <h3>Conservancy and Outreachy fundraiser</h3>
   <p>
     Outreachy will be promoting the Software Freedom Conservancy fundraiser in November 2024. Outreachy is an initiative of Conservancy, and two Outreachy organizers are Conservancy staff. Outreachy could not operate without the support of Software Freedom Conservancy.
@@ -171,11 +208,14 @@
   <p>
     <a href="https://lists.outreachy.org/cgi-bin/mailman/admin/announce">Sign up for Outreachy's announcement mailing list</a> for more details on how to help with the fundraiser. Expect an email in mid-October.
   </p>
+  <hr id="stories">
   <h3>Promoting stories of Outreachy</h3>
   <p>Outreachy needs support from the open source community to share stories about the impact of our program.</p>
+  <p><u><b>Show your support of Outreachy</b></u></p>
   <p>
     In October, Outreachy will be sharing badges that you can use for your profile picture on social media, GitHub, and GitLab. Anyone can use the Outreachy and Conservancy badge. Outreachy will also be sharing unique badges for past Outreachy interns, mentors, and community coordinators. Setting your avatar to this badge will help show the impact of Outreachy on the open source community.
   </p>
+  <p><u><b>Share stories of Outreachy's impact</b></u></p>
   <p>
     You can also help by sharing stories of Outreachy's impact. We would love it if you would share your stories with us by <a href="https://www.outreachy.org/contact/organizers/">emailing Outreachy organizers</a> with a link to your story, and share them again during the SFC fundraiser in November. When you post your story, please make sure to tag the Outreachy account on the Fediverse (Mastodon), Twitter, or LinkedIn.
   </p>
@@ -185,21 +225,26 @@
   <p>
     Stories of Outreachy's impact can come in all forms! No story is too small, and every story is important. We're so happy to hear that Outreachy has been an important to you and your open source community.
   </p>
+  <p><u><b>Promoting Outreachy intern stories</b></u></p>
   <p>
     If you are a past Outreachy intern, we want to hear about your journey! You are welcome to write about any aspect of Outreachy's impact on you. If you need any help brainstorming things to write about, you can ask yourself the following questions: Where were you before your Outreachy internship? What path did you take after your internship? What challenges have you faced? How did the skills you learned during Outreachy help you on your journey? How did working with an Outreachy mentor and open source community change your life? Then use the answers to create your story, and share it via social media, blog post, video, or whatever format works for you. If you don't feel comfortable sharing it on social media or would rather share it anonymously, you can reach out to us and we can post your story.
   </p>
   <p>
     We also encourage open source communities to write about the contributions of past Outreachy interns. You can talk about an Outreachy intern's contribution during their internship, or a past Outreachy intern's contributions after their internship. We are especially interested in hearing about the journey of Outreachy past interns to become key contributors, community leaders, and open source advocates.
   </p>
+  <p><u><b>Promoting Outreachy's impact on open source communities</b></u></p>
   <p>
     We also encourage past Outreachy mentoring communities to write about the impact Outreachy had on your open source community. Perhaps the Outreachy application process was an eye-opening way to see how your community's new contributor processes could be improved. Maybe your community learned more inclusive practices from an Outreachy organizer or another Outreachy mentoring organization. Perhaps your community was one that was transformed by continued involvement by former interns. There is no impact that is too small! We are so excited to hear how Outreachy has impacted your open source community.
   </p>
+  <p><u><b>Sharing Outreachy mentors' stories</b></u></p>
   <p>
     For past Outreachy mentors, we encourage you to talk about how Outreachy has impacted you personally. Perhaps Outreachy helped you improve your communication or collaboration skills. Maybe your experience as an Outreachy mentor has improved how you mentor coworkers in your job. Perhaps working with an Outreachy intern opened your eyes to a different perspective and different experiences of people around the world. Maybe you found personal joy and satisfaction in watching your Outreachy intern take on new challenges, learn and grow. Outreachy is so interested to hear how people find meaning and purpose by volunteering as Outreachy mentors.
   </p>
+  <p><u><b>Join the fundraising discussion</b></u></p>
   <p>
     We are so excited to hear and promote your stories! If you have any questions, you can email Outreachy organizers. If you are a past Outreachy participant, please join the fundraising discussion on the private Outreachy Zulip chat. If you need access to Zulip, please email Outreachy organizers with your name, which internship cohort you participated in, what role you participated as (intern, mentor, coordinator), and what open source community you participated with.
   </p>
+  <p><u><b>Fundraising announcement email</b></u></p>
   <p>
     <a href="https://lists.outreachy.org/cgi-bin/mailman/admin/announce">Sign up for Outreachy's announcement mailing list</a> for more details on how to help with the end of year fundraiser. You can expect an email in mid-October.
   </p>
