Replace the first answer in Rafiat's interview with the correct answer that was provided

--- a/home/templates/home/blog/2024-07-19-outreachy-impact-ahmed-rafiat.html
+++ b/home/templates/home/blog/2024-07-19-outreachy-impact-ahmed-rafiat.html
@@ -28,7 +28,8 @@
     <b>Q: Can you tell us about your Oppia project?</b>
   </p>
   <p>
-    <b>Rafiat:</b> I'm a software engineering graduate with a Bachelor's degree in Software Engineering, currently pursuing my master's in Data Science. I am an organizer for GDG Bamenda and Women Techmakers(WTM) Bamenda. I'm also a Women Techmakers ambassador, and I'm really glad to be one. I discovered Outreachy through the GDG Bamenda community. An Outreachy alum shared a link for people to apply. Despite lacking skills initially, I applied out of curiosity. For my first application to Outreachy, I chose to just observe how the program was. That was when I found Mboalab, a community that shared my interests and values in tech and medicine. I joined the community forum, and I just got chatting.
+    <b>Rafiat:</b> My internship focused on creating engaging science lessons for learners around the world. By leveraging interactive tools like skill trees, skill tables, and story outlines and scripts, I sought to make learning fun, interactive and educational. The ultimate goal was to enhance accessibility and interactivity in educational/academic content, making it easier for underserved learners around the world to grasp complex concepts.
+    Additionally, I reviewed lessons for possible improvements and translated lessons into the Yoruba Language.
   </p>
   <p>
     <b>Q: What were some of the biggest challenges you encountered?</b>
