Update's Ahmed's name to Olaitan

--- a/home/templates/home/blog/2024-07-19-outreachy-impact-ahmed-rafiat.html
+++ b/home/templates/home/blog/2024-07-19-outreachy-impact-ahmed-rafiat.html
@@ -12,11 +12,11 @@
   </p>
   <div class="mb-4 mt-4">
     <img src="{% static 'intern-spotlight/ahmed-rafiat-banner.png' %}"
-         alt="Banner image shows portraits of Outreachy interns - Ahmed Olarenwaju (left) and Rafiat Sulaimon (right) interviewed for this blog post."
+         alt="Banner image shows portraits of Outreachy interns - Ahmed Olaitan (left) and Rafiat Sulaimon (right) interviewed for this blog post."
          class="rounded mx-auto d-block img-fluid"
          width="800">
     <figcaption class="text-center font-italic">
-      Photo: Ahmed Olarenwaju (left), Rafiat Sulaimon (right). Photo Copyright: Ahmed Olarenwaju, Rafiat Sulaimon (respective owners).
+      Photo: Ahmed Olaitan (left), Rafiat Sulaimon (right). Photo Copyright: Ahmed Olaitan, Rafiat Sulaimon (respective owners).
     </figcaption>
   </div>
   <h2>Rafiat's Journey: Creating Engaging Science Lessons with Oppia</h2>
@@ -69,7 +69,7 @@
   </p>
   <h2>Ahmed's Experience: Documenting Accessibility Tools for Wagtail</h2>
   <p>
-    Ahmed Olarenwaju, an Outreachy intern with Wagtail, worked on documenting accessibility tools for Wagtail. We spoke with Ahmed to learn about his internship experience and how the Outreachy program has impacted him.
+    Ahmed Olaitan, an Outreachy intern with Wagtail, worked on documenting accessibility tools for Wagtail. We spoke with Ahmed to learn about his internship experience and how the Outreachy program has impacted him.
   </p>
   <h3 class="font-italic">Interview with Ahmed</h3>
   <p>
@@ -86,7 +86,7 @@
   </p>
   <p>
     <a href="https://olanrewajuolaitan.substack.com/p/accessibility-and-usability-like"
-       target="_blank">Accessibility and Usability by Ahmed Olarenwaju</a>
+       target="_blank">Accessibility and Usability by Ahmed Olaitan</a>
   </p>
   <p>
     <b>Q: Did you face any challenges during your internship?</b>
