Edit Karen's title on the about page

--- a/contacts/templates/contact_form/contact.html
+++ b/contacts/templates/contact_form/contact.html
@@ -25,7 +25,7 @@ Contact Outreachy
 		</div>
 		<div class="col-sm">
 			<img src="{% static 'organizers/karen.jpg' %}" class="img-thumbnail float-top mr-3" alt="Photo of Karen" height="200" width="200">
-			<p>Karen Sandler is the Outreachy grants and sponsorship lead. Karen Sandler is also the Executive Director of <a href="https://www.sfconservancy.org">Software Freedom Conservancy</a>. Karen uses she/her pronouns.</p>
+			<p>Karen Sandler is the co-founder of Outreachy. Karen Sandler is also the Executive Director of <a href="https://www.sfconservancy.org">Software Freedom Conservancy</a>. Karen uses she/her pronouns.</p>
 		</div>
 	</div>
 	<div class="row">
@@ -55,7 +55,7 @@ Contact Outreachy
 	<div class="row">
 		<div class="col-sm">
 			<img src="{% static 'organizers/karen.jpg' %}" class="img-thumbnail float-top mr-3" alt="Photo of Karen" height="200" width="200">
-			<p>Karen Sandler is the Outreachy grants and sponsorship lead. Karen Sandler is also the Executive Director of <a href="https://www.sfconservancy.org">Software Freedom Conservancy</a>. Karen uses she/her pronouns.</p>
+			<p>Karen Sandler is the co-founder of Outreachy. Karen Sandler is also the Executive Director of <a href="https://www.sfconservancy.org">Software Freedom Conservancy</a>. Karen uses she/her pronouns.</p>
 		</div>
 		<div class="col-sm">
 			<img src="{% static 'organizers/tony.jpg' %}" class="img-thumbnail float-top mr-3" alt="Photo of Tony is CC BY-SA 4.0 by Myleen Hollero - Myleen Hollero Photography" height="200" width="200">
