Try making sponsorship level placement paragraph less confusing (I don't think I succeeded)

--- a/home/templates/home/sponsor.html
+++ b/home/templates/home/sponsor.html
@@ -30,7 +30,7 @@ Sponsor Outreachy
 
 <p>Outreachy welcomes new sponsors for each internship cohort. Outreachy has two internship cohorts per year.</p>
 
-<p>Outreachy sponsors will receive logo placement for their sponsorship level for six months. Sponsors can also donate annually, and receive logo placement at that sponsorship level for one year.</p>
+<p>Outreachy sponsors will receive logo placement for their sponsorship level for one internship cohort (six months). Sponsors who want logo placement for one year can increase their donation to sponsor two Outreachy internship cohorts.</p>
 
 <p>Please consider sponsoring the program at one of these game-changing levels:</p>
 
