Sponsorship: Be straight up that a one year sponsorship requires twice the donation as sponsoring one internship cohort

--- a/home/templates/home/sponsor.html
+++ b/home/templates/home/sponsor.html
@@ -28,9 +28,11 @@ Sponsor Outreachy
 
 <h2>Sponsorship Opportunities</h2>
 
-<p>Outreachy welcomes new sponsors for each internship cohort. Outreachy has two internship cohorts per year.</p>
+<p>Outreachy welcomes new sponsors for each internship cohort.</p>
 
-<p>Outreachy sponsors will receive logo placement for their sponsorship level for one internship cohort (six months). Sponsors who want logo placement for one year can increase their donation to sponsor two Outreachy internship cohorts.</p>
+<p>Outreachy sponsors will receive logo placement for their sponsorship level for 6 months. This means their sponsorship will be promoted for one Outreachy internship cohort. Outreachy has two internship cohorts per year.</p>
+
+<p>Sponsors who wish to have logo placement for 12 months will need to double their donation to sponsor two Outreachy internship cohorts.</p>
 
 <p>Please consider sponsoring the program at one of these game-changing levels:</p>
 
