Add blog post for May 2025 community cfp opening

--- a/home/templates/home/blog/2025-01-15-community-cfp-open.html
+++ b/home/templates/home/blog/2025-01-15-community-cfp-open.html
@@ -96,7 +96,7 @@
   Chat dates:
   <ul>
     <li>
-      August 14 at 4pm UTC - <a href="#mentor-chats">Live Q&A for FOSS communities interested in mentoring Outreachy interns</a>
+      February 5 at 3pm UTC - <a href="#mentor-chats">Live Q&A for FOSS communities interested in mentoring Outreachy interns</a>
     </li>
   </ul>
 </p>
@@ -237,7 +237,7 @@
     <li>Ushahidi empowers people through citizen-generated data to develop solutions that strengthen their communities</li>
   </ul>
   <p>
-    Outreachy expects to fund 5-10 humanitarian open source communities in the May 2025 internship cohort. Humanitarian communities will be guaranteed funding for at least 1 intern.
+    Outreachy hopes to fund 1-5 humanitarian open source communities in the May 2025 internship cohort. However, due to <a href='{% url '2024-08-outreachy-needs-your-help' %}'>budget constraints</a>, we can't guarantee funding.
   </p>
   <p>
     To apply for humanitarian open source intern funding, please <a href={% url 'community-cfp' %}>submit a community application</a>.
