--- a/home/templates/home/blog/2025-01-15-community-cfp-open.html
+++ b/home/templates/home/blog/2025-01-15-community-cfp-open.html
@@ -15,7 +15,7 @@
   </p>
   <h2>Outreachy seeks mentors</h2>
   <p>
-    Outreachy is seeking open source and open science communities to mentor Outreachy interns in the May 2025 cohort.
+    Outreachy is seeking open source communities to mentor Outreachy interns in the May 2025 cohort.
   </p>
   {% include 'home/snippet/funding_short_description.html' %}
   <h2>Important dates</h2>
