--- a/home/templates/home/blog/2025-01-15-community-cfp-open.html
+++ b/home/templates/home/blog/2025-01-15-community-cfp-open.html
@@ -109,7 +109,7 @@
 </h2>
 <p>Outreachy is seeking mentors from open source communities.</p>
 <p>
-  Outreachy welcomes many different types of open source and open science communities. Whether you are a three-person community focused on open science research, or a large open source community that needs better documentation, Outreachy welcomes you!
+  Outreachy welcomes many different types of open source communities. Whether you are a three-person community focused on open science research, or a large open source community that needs better documentation, Outreachy welcomes you!
 </p>
 <p>Examples of open source communities that have participated in Outreachy include:</p>
 <ul>
