--- a/home/templates/home/blog/2025-01-20-initial-applications-open.html
+++ b/home/templates/home/blog/2025-01-20-initial-applications-open.html
@@ -92,7 +92,7 @@ Outreachy internships are:
 <h2 id='internship-projects'><a href='#internship-projects'>💻 What internship projects do you have?</a></h2>
 
 <p>
-Outreachy interns work on open source and open science projects. Experienced mentors will guide you.
+Outreachy interns work on open source projects. Experienced mentors will guide you.
 </p>
 
 <h3 id='open-source-internships'><a href='#open-source-internships'>👩🏿‍💻 Open source internships</a></h3>
