--- a/home/templates/home/blog/2025-01-20-initial-applications-open.html
+++ b/home/templates/home/blog/2025-01-20-initial-applications-open.html
@@ -71,7 +71,7 @@ Important dates:
 
 <h2 id='what-is-outreachy'><a href='#what-is-outreachy'>🤔 What is Outreachy?</a></h2>
 
-<p>Outreachy provides <b>internships in open source and open science</b>. We provide internships to people subject to systemic bias and impacted by underrepresentation in the technical industry where they are living.
+<p>Outreachy provides <b>internships in open source</b>. We provide internships to people subject to systemic bias and impacted by underrepresentation in the technical industry where they are living.
 </p>
 
 <p>
