--- a/home/templates/home/blog/2025-01-15-community-cfp-open.html
+++ b/home/templates/home/blog/2025-01-15-community-cfp-open.html
@@ -87,7 +87,7 @@
   <a href='#mentor-chats'>Live-streamed mentor chats</a>
 </h2>
 <p>
-  Are you curious what it's like being an Outreachy mentor? Are you thinking about having your open source or open science community mentor Outreachy interns?
+  Are you curious what it's like being an Outreachy mentor? Are you thinking about having your open source community mentor Outreachy interns?
 </p>
 <p>
   Come learn more about mentoring Outreachy interns during our two live-streamed chats! We'll host a panel of past Outreachy community coordinators and mentors, who will share their experiences and tips for participating in Outreachy.
