--- a/home/templates/home/blog/2025-01-15-community-cfp-open.html
+++ b/home/templates/home/blog/2025-01-15-community-cfp-open.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 {% load static %}
-{% block title %}Call for May 2025 mentoring communities{% endblock %}
+{% block title %}Call for June 2025 mentoring communities{% endblock %}
 {% block content %}
   {% load humanize %}
-  <h1>Call for May 2025 mentoring communities</h1>
+  <h1>Call for June 2025 mentoring communities</h1>
   <p>
-    <i>Date: January 15, 2025</i>
+    <i>Date: January 20, 2025</i>
   </p>
   <img src="{% static 'img/outreachy-nigerian-celebration-omotola-by-banner.jpg' %}"
        alt="Two black people are standing by an Outreachy banner. On the left, Omotola Omotayo, holds a sign that reads 'Outreachy - connecting mentors and mentees'. The Outreachy banner says 'Outreachy - Paid remote 3-month internships supporting diversity. Open source internships: software, documentation, design, translation, user experience.' Photo is cc-by 4.0 Outreachy"
@@ -15,12 +15,14 @@
   </p>
   <h2>Outreachy seeks mentors</h2>
   <p>
-    Outreachy is seeking open source communities to mentor Outreachy interns in the May 2025 cohort.
+    Outreachy is seeking open source communities to mentor Outreachy interns in the June 2025 cohort.
   </p>
   {% include 'home/snippet/funding_short_description.html' %}
   <h2>Important dates</h2>
   <p>
     <ul>
+      <li>January 29 at 3pm UTC - <a href="#mentor-chats">Live Q&A for FOSS communities interested in mentoring Outreachy interns</a></li>
+	  <li>February 5 at 3pm UTC - <a href="#mentor-chats">Live Q&A for people interested in becoming an Outreachy mentor</a><BR><BR></li>
       <li>
         {{ current_round.lateorgs }} at 4pm UTC - deadline for FOSS communities to <a href="{% url 'community-cfp' %}">sign up to participate as a mentoring organization</a>
       </li>
@@ -48,7 +50,7 @@
 </br>
 <a href='#mentor-duties'>Who makes a good Outreachy mentor?</a>
 </br>
-<a href='#important-dates'>May 2025 internship dates</a>
+<a href='#important-dates'>June 2025 internship dates</a>
 <br>
 <a href='#humanitarian-funding'>Humanitarian open source funding</a>
 <br>
@@ -95,6 +97,7 @@
 <p>
   Chat dates:
   <ul>
+    <li>January 29 at 3pm UTC - <a href="#mentor-chats">Live Q&A for FOSS communities interested in mentoring Outreachy interns</a></li>
     <li>
       February 5 at 3pm UTC - <a href="#mentor-chats">Live Q&A for FOSS communities interested in mentoring Outreachy interns</a>
     </li>
@@ -192,7 +195,7 @@
   <p>Mentors will need to provide a list of tasks for applicants to work on during the contribution period.</p>
   <hr>
   <h2 id='important-dates'>
-    <a href='#important-dates'>May 2025 internship dates</a>
+    <a href='#important-dates'>June 2025 internship dates</a>
   </h2>
   {% include 'home/snippet/mentor-timeline.html' %}
   <hr>
@@ -204,7 +207,7 @@
   <h2 id='humanitarian-funding'>
     <a href='#humanitarian-funding'>Humanitarian open source funding</a>
   </h2>
-  <p>Outreachy is seeking humanitarian open source communities to participate in the May 2025 internship round.</p>
+  <p>Outreachy is seeking humanitarian open source communities to participate in the June 2025 internship round.</p>
   <p>
     Outreachy welcomes applications from all open source communities that address humanitarian issues. You will need to meet <a href="{% url 'docs-community' %}#participation-rules">our eligibility criteria</a>.
   </p>
@@ -237,7 +240,7 @@
     <li>Ushahidi empowers people through citizen-generated data to develop solutions that strengthen their communities</li>
   </ul>
   <p>
-    Outreachy hopes to fund 1-5 humanitarian open source communities in the May 2025 internship cohort. However, due to <a href='{% url '2024-08-outreachy-needs-your-help' %}'>budget constraints</a>, we can't guarantee funding.
+    Outreachy hopes to fund 1-5 humanitarian open source communities in the June 2025 internship cohort. However, due to <a href='{% url '2024-08-outreachy-needs-your-help' %}'>budget constraints</a>, we can't guarantee funding.
   </p>
   <p>
     To apply for humanitarian open source intern funding, please <a href={% url 'community-cfp' %}>submit a community application</a>.
